# Diabetes-prediction-app

./: .gitignore  README.md  pyproject.toml
.dvc/: config
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: demo.py  demo_python_operator.py  pipeline.py
config/: ingestion.yaml
data/: drift_state.json  feature_metadata.json  ingestion_state.json  model_metrics.json  processed.dvc  promotion_state.json  reference.dvc  validated.dvc  validation_state.json
src/drift/: drift_detection.py
src/evaluation/: model_evaluation.py
src/ingestion/: data_ingestion.py
src/preprocessing/: preprocessing.py
src/registry/: model_promotion.py
src/training/: train_models.py
src/utils/: logger.py  paths.py
src/validation/: data_validation.py
